split sink nodes from dag; made NoSourceDagRunner serializable